Move asserts in FocusNavigationController.

An assertion in
FocusController::findFocusableElementAcrossFocusScopesForward and
FocusController::findFocusableElementAcrossFocusScopesBackward
assumed that focus navigation happens from a focused
element to another, but with the introduction of
sequential focus navigation starting point,
it is no longer true.

Moving the assertion to where appropriate.

BUG=609012
TEST=FocusControllerTest.DoNotCrash{1,2}

Review-Url: https://codereview.chromium.org/1954023002
Cr-Commit-Position: refs/heads/master@{#393194}

Former-commit-id: 65a82e070e5102bc29de52ddf6071018d703c304